--- a/rent.html
+++ b/rent.html
@@ -9,20 +9,19 @@
     <header>
         <!-- Create link to file css... -->
         <link href="asset/css/rent.css" rel="stylesheet">
+        <img src="./asset/images/logo x150.png" alt="test">
             <nav>
                 <!-- Add parameters in file css for little picture... -->
                 <ul class="menu">
-                    <img class="mini" src="./asset/images/logo x150.png" alt="test">
-                    <li class="menu-format"><a href="buy.html">Acheter</a></li>
-                    <li class="menu-format">Louer</li>
-                    <li class="menu-format"><a href="sell.html">Vendre</a> </li>
-                    <li class="menu-format"><a href="contact.html">Contact</a></li>
+                    <li><a href="buy.html">Acheter</a></li>
+                    <li>Louer</li>
+                    <li><a href="sell.html">Vendre</a> </li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li class="menu-right"><a href="to_manage.html">Mon compte</a></li>
-                    <li class="menu-right"><img class="mini" src="./asset/images/compte.svg" alt="test"></li>
                 </ul>
             </nav>
     </header>
-    <div class="font-title">
+   <!-- <div class="font-title">
         <div class="div2">
             <img src="asset/images/rent/picture-title.jpg">
         </div>
@@ -30,6 +29,6 @@
             <h1>Chercher et trouver une location</h1>
         </div>
         
-    </div>
+    </div>-->
 </body>
 </html>
