--- a/rent.html
+++ b/rent.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Locations</title>
+    <link href="asset/css/rent.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <!-- Create link to file css... -->
-        <link href="asset/css/rent.css" rel="stylesheet">
         <img src="./asset/images/logo x150.png" alt="test">
             <nav>
                 <!-- Add parameters in file css for little picture... -->
@@ -17,7 +17,7 @@
                     <li>Louer</li>
                     <li><a href="sell.html">Vendre</a> </li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li class="menu-right"><a href="to_manage.html">Mon compte</a></li>
+                    <li><a href="to_manage.html">Mon compte</a></li>
                 </ul>
             </nav>
     </header>
