--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/724458d0e8.js" crossorigin="anonymous"></script>
     <title>Accueil</title>
     <link rel="stylesheet" href="./asset/css/index.css">
 </head>
@@ -23,8 +24,8 @@
                 <li><a class="activ" href="login.html">Contact</a></li>
             </ul>
         </nav>
-        <div class="auth">
-            <li><a href="#">Mon compte</a></li>
+        <div class="auth"> 
+            <li><a href="#"><i class="fa-regular fa-user"></i> compte</a></li>
         </div>
    </header>
 <!-- bannière avec fonction recherche -->
@@ -63,15 +64,19 @@
         <h1>Nos derniers biens en vente</h1>
             <div class="sell_slide">
                 <div class="sell_frame">
+                    <p>119000€<br>MAISON<br>SAINT-JUNIEN</p>
                     <a class="activ_sell" href="#"><img src="asset/images/home/bien_1.jpg" alt="bien 1 acgdimmo" width="200"></a>
                 </div>
                 <div class="sell_frame">
+                    <p>119000€<br>MAISON<br>SAINT-JUNIEN</p>
                     <a class="activ_sell" href="#"><img src="asset/images/home/bien_2.jpg" alt="bien 2 acgdimmo" width="200"></a>
                 </div>
                 <div class="sell_frame">
+                    <p>119000€<br>MAISON<br>SAINT-JUNIEN</p>
                     <a class="activ_sell" href="#"><img src="asset/images/home/bien_3.jpg" alt="bien 3 acgdimmo" width="200"></a>
                 </div>
                 <div class="sell_frame">
+                    <p>119000€<br>MAISON<br>SAINT-JUNIEN</p>
                     <a class="activ_sell" href="#"><img src="asset/images/home/bien_4.jpg" alt="bien 4 acgdimmo" width="200"></a>
                 </div>
             </div> 
