--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
         <div class="auth"> 
-            <li><a href="#"><i class="fa-regular fa-user"></i> compte</a></li>
+            <li><a href="#"><i class="fa-regular fa-user"></i>Mon compte</a></li>
         </div>
    </header>
 <!-- bannière avec fonction recherche -->
