in progress to manage

--- a/to_manage.html
+++ b/to_manage.html
@@ -56,5 +56,32 @@
                 mollis risus eget est malesuada varius. Donec blandit feugiat risus.
             </p>
         </div>
+    <!-- Section service 1 et 2 -->
+    <section class="">
+        <!-- Service 1 -->
+        <article class="frame_1">
+            <header>
+
+            </header>
+            <main>
+
+            </main>
+            <footer>
+
+            </footer>
+        </article>
+        <!-- Service 2 -->
+        <article class="frame_2">
+            <header>
+
+            </header>
+            <main>
+
+            </main>
+            <footer>
+
+            </footer>
+        </article>
+    </section>    
 </body>
 </html>
