icones biens en ventes

--- a/index.html
+++ b/index.html
@@ -64,19 +64,31 @@
         <h1>Nos derniers biens en vente</h1>
             <div class="sell_slide">
                 <div class="sell_frame">
-                    <p>119000€<br>MAISON<br>SAINT-JUNIEN</p>
+                    <p>119000€</p>
+                    <p>MAISON</p>
+                    <P>SAINT-JUNIEN</p>
                     <a class="activ_sell" href="#"><img src="asset/images/home/bien_1.jpg" alt="bien 1 acgdimmo" width="200"></a>
+                    <div class="sell_type">
+                        <p class="sell_type-bedroom"><i class="fa-solid fa-bed"></i><span>2</span></p>
+                        <p class="sell_type_room"><i class="fa-regular fa-square"></i><span>90.3 m²</span></p>
+                    </div>
                 </div>
                 <div class="sell_frame">
-                    <p>119000€<br>MAISON<br>SAINT-JUNIEN</p>
+                    <p>119000€</p>
+                    <p>MAISON</p>
+                    <P>SAINT-JUNIEN</p>
                     <a class="activ_sell" href="#"><img src="asset/images/home/bien_2.jpg" alt="bien 2 acgdimmo" width="200"></a>
                 </div>
                 <div class="sell_frame">
-                    <p>119000€<br>MAISON<br>SAINT-JUNIEN</p>
+                    <p>119000€</p>
+                    <p>MAISON</p>
+                    <P>SAINT-JUNIEN</p>
                     <a class="activ_sell" href="#"><img src="asset/images/home/bien_3.jpg" alt="bien 3 acgdimmo" width="200"></a>
                 </div>
                 <div class="sell_frame">
-                    <p>119000€<br>MAISON<br>SAINT-JUNIEN</p>
+                    <p>119000€</p>
+                    <p>MAISON</p>
+                    <P>SAINT-JUNIEN</p>
                     <a class="activ_sell" href="#"><img src="asset/images/home/bien_4.jpg" alt="bien 4 acgdimmo" width="200"></a>
                 </div>
             </div> 
