--- a/rent.html
+++ b/rent.html
@@ -9,26 +9,28 @@
 <body>
     <header>
         <!-- Create link to file css... -->
-        <img src="./asset/images/logo x150.png" alt="test">
+        <logo><img src="./asset/images/logo x150.png" alt="test"></logo>
             <nav>
                 <!-- Add parameters in file css for little picture... -->
                 <ul class="menu">
                     <li><a href="buy.html">Acheter</a></li>
                     <li>Louer</li>
                     <li><a href="sell.html">Vendre</a> </li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="to_manage.html">Mon compte</a></li>
                 </ul>
             </nav>
+                <ul class="compte">
+                    <li><a href="to_manage.html">Mon compte</a></li>
+                </ul>
     </header>
-   <!-- <div class="font-title">
-        <div class="div2">
-            <img src="asset/images/rent/picture-title.jpg">
+    <main>
+   <div class="font-title">
+        <div class="backpict">
+            <img src="./asset/images/rent/picture-title.jpg" alt="">
         </div>
-        <div class="div1">
+        <div class="title-search">
             <h1>Chercher et trouver une location</h1>
         </div>
-        
-    </div>-->
+    </div>
+    </main>
 </body>
 </html>
