--- a/aboutus.html
+++ b/aboutus.html
@@ -16,7 +16,10 @@
     <header>   
             <div>
                 <a href="">
-                    <img src="asset/images/logo x150.png" alt="logo" class="logo" srcset="">
+                    <div class="logo-overlay">
+                        <img src="asset/images/logo x150.png" alt="logo" class="logo" srcset="">
+                        <div class="overlay">Rejoignez-nous</div>
+                    </div>
                 </a>
             </div>
             <nav>
