--- a/offers.html
+++ b/offers.html
@@ -11,15 +11,18 @@
 <body>
     <header> 
         <!--Menu-->
+        <!--Logo cliquable vers un lien-->
         <a href="index.html">
             <img src="asset/images/logo x150.png" alt="logo" width="75">
         </a>
+        <!--Barre de navigation horizontale-->
         <nav class="menu">
             <a href="buy.html">Acheter</a>
             <a href="rent.html">Louer</a>
             <a href="sell.html">Vendre</a>
             <a href="contact.html">Contact</a>
         </nav>
+        <!--Espace de connexion + icone cliquable-->
         <div class="logo-auth">
             <a href="login.html">
                 <img id="account" src="asset/images/offers/account.png" alt="" width="20"></a>
@@ -27,11 +30,12 @@
         </div>
     </header>
     <main>
-        <!--First section-->
+        <!--Première section-->
         <section class="section1">
             <div class="section1-title">
-                <p>Nos offres d'emploi</p>
+                <h3>Nos offres d'emploi</h3>
             </div>
+            <!--Zone de recherche-->
             <div class="section1-form">
                 <input id="form" type="text" name="job" value="Emploi" onfocus="this.value='';">
                 <input id="form" type="text" name="localisation" value="Où" onfocus="this.value='';">
@@ -105,17 +109,17 @@
             <a href="#"><img id="map" src="asset/images/offers/map.png" alt="" width="150"></a>
         </section>
         <ul class="paging">
-            <a href="#" aria-label="Precedent">
-                <img src="asset/images/offers/noun-left-arrow-3465503.png" alt="" width="30">
-            </a></li>
+            <div>
+                <a class="go-left" href="#"><span>&#8592;</span></a>
+            </div></li>
             <li><a href="#">2</a></li>
             <li><a href="#">3</a></li>
             <li><a href="#">4</a></li>
             <li><a href="#">...</a></li>
             <li><a href="#">20</a></li>
-            <a href="#" aria-label="Next">
-                <img src="asset/images/offers/noun-arrow-3771902.png" width=" 30">
-            </a></li>
+            <div>
+                <a class="go-right" href="#"><span>&#8594;</span></a>
+            </div></li>
         </ul>
         <p id="announce-number">... - ... sur ... annonces</p>
         </div>
@@ -128,44 +132,40 @@
             <div class="section3-title">
                 <h4>Mieux nous connaître</h4>
             </div>
-            <div>
-                <div class="slogan-section3-text-agency-photo">
-                    <div class="section3-slogan">
-                        <h4>"Clé en main bonheur certain !"</h4>
-                    </div>
-                    <div class="section3-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
-                            in
-                            culpa qui officia deserunt mollit anim id est laborum.</p>
-                    </div>
-                    <div class="agency-photo">
-                        <img src="asset/images/offers/agency.jpg" alt="photo de l'agence" width="400">
-                    </div>
+            
+            <div class="slogan">
+                <div class="agency">
+                    <h3>"Clé en main bonheur certain !"</h3>
+                    <p class="description"> <span> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></p>
                 </div>
-            </div>
-            <div class="team_photo">
-                <div>
-                    <img src="asset/images/offers/real_estate_agent_1.jpg" alt="photo 1" width="200px">
+                <div class="photo7">
+                    <img   id="lil" src="asset/images/offers/agency.jpg" alt="photo 2" width="800px">
+                </div>
+                </div>
+
+            <div class="photo123">
+                <div class="photo">
+                    <img  id="lol" src="asset/images/offers/real_estate_agent_1.jpg" alt="photo 1" width="200px">
                     <figcaption> <strong> Lorem - dolor sit </strong> </figcaption>
                     <p class="testimony"> <i> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                             exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</i></p>
                 </div>
-                <div><img src="asset/images/offers/real_estate_agent_2.jpg" alt="photo 2" width="200px">
+                <div class="photo">
+                    <img   id="lol" src="asset/images/offers/real_estate_agent_2.jpg" alt="photo 2" width="200px">
                     <figcaption> <strong> Lorem - dolor sit </strong> </figcaption>
                     <p class="testimony"> <i> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                             exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</i></p>
                 </div>
-                <div>
-                    <img src="asset/images/offers/real_estate_agent_3.jpg" alt="photo 3" width="200px">
+                <div class="photo">
+                    <img   id="lol"  src="asset/images/offers/real_estate_agent_3.jpg" alt="photo 3" width="200px">
                     <figcaption> <strong> Lorem - dolor sit </strong> </figcaption>
                     <p class="testimony"> <i> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -190,25 +190,27 @@
         </div>
         <nav class="footer-menu">
             <p><strong>Services</strong></p>
-            <a href="buy.html">Acheter</a>
-            <a href="rent.html">Louer</a>
-            <a href="sell.html">Vendre</a>
+            <li><a href="buy.html">Acheter</a></li>
+            <li><a href="rent.html">Louer</a></li>
+            <li><a href="sell.html">Vendre</a></li>
         </nav>
         <nav class="footer-menu">
             <p><strong>Accès rapide</strong></p>
-            <a href="#">Inscription newsletter</a>
-            <a href="#">Qui sommes-nous ?</a>
-            <a href="offers-last.html">Nos offres d'emploi</a>
-            <a href="#">Avis client</a>
-            <a href="#">Plan du site</a>
+            <li><a href="#">Inscription newsletter</a></li>
+            <li><a href="aboutus.html">Qui sommes-nous ?</a></li>
+            <li><a href="offers-last.html">Nos offres d'emploi</a></li>
+            <li><a href="#">Avis client</a></li>
+            <li><a href="#">Plan du site</a></li>
         </nav>
         <nav class="footer-menu">
             <p><strong>Contact</strong></p>
-            <p>...-...-...-...-...</p>
-            <a href="#">contact@acgdimmo.fr</a>
-            <a
-                href="https://www.google.fr/maps/place/87200+Saint-Junien/@45.8964635,0.8029236,12z/data=!3m1!4b1!4m6!3m5!1s0x47feeadaef87b0c9:0x8b265b0dc126d53e!8m2!3d45.88716!4d0.901165!16zL20vMDh6Xzkz?entry=ttu">Saint-Junien</a>
-        </nav>
+            <section class="last-footer">
+            <li id="number" ><p>...-...-...-...-...</p></li>
+            <li><a href="#">contact@acgdimmo.fr</a></li>
+            <li><a
+                href="https://www.google.fr/maps/place/87200+Saint-Junien/@45.8964635,0.8029236,12z/data=!3m1!4b1!4m6!3m5!1s0x47feeadaef87b0c9:0x8b265b0dc126d53e!8m2!3d45.88716!4d0.901165!16zL20vMDh6Xzkz?entry=ttu">Saint-Junien</a></li>
+            </section>
+            </nav>
 
         <div class="copyright">
         </div>
@@ -219,3 +221,30 @@
 </body>
 
 </html>
+
+<!-- 
+    <div>
+                <div class="agency-photo">
+                    <div class="section3-slogan">
+                        <h4>"Clé en main bonheur certain !"</h4>
+                    </div>
+                    <div class="section3-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi
+                            ut
+                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                            esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
+                            in
+                            culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                </div>
+                    <div class="slogan-section3-text-agency-photo">
+                    <div class="agency-photo">
+                        <img  id="ooo" src="asset/images/offers/agency.jpg" alt="photo de l'agence" width="400">
+                    </div>
+                </div>
+            </div>
+   -->
