Add link contact

--- a/rent.html
+++ b/rent.html
@@ -16,6 +16,7 @@
                     <li><a href="buy.html">Acheter</a></li>
                     <li>Louer</li>
                     <li><a href="sell.html">Vendre</a> </li>
+                    <li><a href="contact.html">contact</a></li>
                 </ul>
             </nav>
                 <ul class="compte">
