--- a/rent.html
+++ b/rent.html
@@ -24,14 +24,12 @@
                 </ul>
     </header>
     <main>
-   <div class="font-title">
         <div class="backpict">
             <img src="./asset/images/rent/picture-title.jpg" alt="">
         </div>
-        <div class="title-search">
+        <div class="title-search font-title">
             <h1>Chercher et trouver une location</h1>
         </div>
-    </div>
     </main>
 </body>
 </html>
