--- a/rent.html
+++ b/rent.html
@@ -24,8 +24,8 @@
                 </ul>
     </header>
     <main>
-        <div class="backpict">
-            <img src="./asset/images/rent/picture-title.jpg" alt="">
+        <div>
+            <img src="./asset/images/rent/picture-title.jpg" alt="" class="backpict">
         </div>
         <div class="title-search font-title">
             <h1>Chercher et trouver une location</h1>
