--- a/rent.html
+++ b/rent.html
@@ -30,6 +30,9 @@
         <div class="title-search font-title">
             <h1>Chercher et trouver une location</h1>
         </div>
+        <div>
+            <p>ertertertreterter</p>
+        </div>
     </main>
 </body>
 </html>
