--- a/rent.html
+++ b/rent.html
@@ -30,7 +30,7 @@
         <div class="title-search font-title">
             <h1>Chercher et trouver une location</h1>
         </div>
-        <div>
+        <div class="posi">
             <p>ertertertreterter</p>
         </div>
     </main>
