--- a/rent.html
+++ b/rent.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         <div>
-            <img src="./asset/images/rent/picture-title.jpg" alt="" class="backpict">
+            <!--<img src="./asset/images/rent/picture-title.jpg" alt="" class="backpict">-->
         </div>
         <div class="title-search font-title">
             <h1>Chercher et trouver une location</h1>
