--- a/estimate.html
+++ b/estimate.html
@@ -38,10 +38,11 @@
     <button class="account">
         <a href="#">Mon compte</a></button>
     </header>
-
+        <!--Titre de la partie estimer-->
 <h2>Vous souhaitez estimer votre bien ?</h2>
 
 <form>
+        <!--Case d'estimation-->
     <fieldset>
     <h5>Il s'agit d'un :</h5>
     
@@ -63,11 +64,14 @@
       </div>
     <h5>Adresse :</h5>
     <div class="Adresse">
-        <input type="Adresse" placeholder="Ex: 121 Rue des Fleurs 87000 Limoges" style="width: 700px; height: 40px;">
+        <input type="Adresse" placeholder="  Ex: 121 Rue des Fleurs 87000 Limoges" style="width: 700px; height: 40px;">
       </div>
+      <button class="valider">
+        <a href="#">Valider</a>
+      </button>
     </fieldset>
 </form>
-
+        <!--Partie information-->
 <div class="info">
     <article class="container">
         <img class="esti" src="./asset/images/estimation immobilière.jpeg">
@@ -95,37 +99,38 @@
 
 
 <footer>
+        <!--Footer-->
+    <div class="contenu-footer">
 
-    <div>
+        <div class="footer-service">
+            <h4>Nos services</h4>
+            <ul class="liste-services">
+                <li><a href="#">Achat</a></li>
+                <li><a href="#">Vendre</a></li>
+                <li><a href="#">Louer</a></li>
+            </ul>
+        </div>
 
-    <nav class="service">
-        <h4>Services</h4>
-        <ul>
-            <li><a href="#">Acheter</a></li>
-            <li><a href="#">Louer</a></li>
-            <li><a href="#">Vendre</a></li>
-        </ul>
-    </nav>
+        <div class="footer-quick">
+            <h4>Accès rapide</h4>
+            <ul class="liste-quick">
+                <li><a href="#">Inscription newsletter</a></li>
+                <li><a href="#">Qui sommes-nous ?</a></li>
+                <li><a href="#">Nos offres d'emploi</a></li>
+                <li><a href="#">Avis client</a></li>
+                <li><a href="#">Plan du site</a></li>
+            </ul>
+        </div>
 
-    <nav class="service">
-        <h4>Accès rapide</h4>
-        <ul>
-            <li><a href="#">Inscription newsletter</a></li>
-            <li><a href="#">Qui sommes nous ?</a></li>
-            <li><a href="#">Nos offres d'emploi</a></li>
-            <li><a href="#">Avis client</a></li>
-            <li><a href="#">Plan du site</a></li>
-        </ul>
-    </nav>
-
-    <nav class="service">
-        <h4>Contact</h4>
-        <ul>
-            <li>06.08.16.45.22</li>
-            <li><a href="#">contact@acgdimmo.fr</a></li>
-            <li>Saint-Junien</li>
-        </ul>
-    </nav>
+        <div class="footer-contact">
+            <h4>Contact</h4>
+            <ul class="liste-contact">
+                <li>06.08.16.43.22</li>
+                <li>contact@acgdimmo.fr</li>
+                <li>Sain-Junien</li>
+            </ul>
+        </div>
+    </div>
 </footer>
 </body>
 </html>
