Positions divers cadres

--- a/rent.html
+++ b/rent.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Locations</title>
+    <!-- Create link to file css... -->
     <link href="asset/css/rent.css" rel="stylesheet">
 </head>
 <body>
     <header>
-        <!-- Create link to file css... -->
         <logo><img src="./asset/images/logo x150.png" alt="test"></logo>
             <nav>
                 <!-- Add parameters in file css for little picture... -->
@@ -51,7 +51,7 @@
         </div>
         <div class=infos-serv>
             <div>
-                <div id="ordre"><h2>Titre</h2></div>
+                <div id="ordre"><h2>Informations sur les services</h2></div>
                 <div id="ordre"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius dolorem nisi ipsa nesciunt, possimus debitis? Quod eaque similique unde nam voluptatibu</p></div>
             </div>
             <div id="ordre"><img src="./asset/images/rent/agent-immobilier-visite.jpg"></div>
@@ -59,7 +59,7 @@
         <div class=infos-links>
             <div id="ordre"><img src="./asset/images/rent/maison.jpg"></div>
             <div>
-                <div id="ordre"><h2>Titre</h2></div>
+                <div id="ordre"><h2>Liens utiles</h2></div>
                 <div id="ordre"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius dolorem nisi ipsa nesciunt, possimus debitis? Quod eaque similique unde nam voluptatibu</p></div>
             </div>
             
