--- a/rent.html
+++ b/rent.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <logo><img src="./asset/images/logo x150.png" alt="test"></logo>
+        <logo><a href="index.html"><img src="./asset/images/logo x150.png" alt="test"></a></logo>
             <nav>
                 <!-- Add parameters in file css for little picture... -->
                 <ul class="menu">
