refactor: merge (hover opacity) classes into a single

--- a/sell.html
+++ b/sell.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="flex">
-        <a href="index.html">
+        <a class="hover-low-opacity" href="index.html">
             <img id="head_logo" src="asset/images/logo x150.png" alt="Logo ACGDImmo" width="133" height="">
         </a>
         <nav>
@@ -71,19 +71,19 @@
     <footer class="flex">
         <div class="identity">
             <a href="index.html">
-                <img class="hover-footer-logo-opacity" src="asset/images/logo_white_150.png" alt="Logo ACGDImmo" width="200px" height="">
+                <img class="hover-low-opacity" src="asset/images/logo_white_150.png" alt="Logo ACGDImmo" width="200px" height="">
             </a>
             <div class="social-media">
                 <p class="content-text">Retrouvez-nous sur nos réseaux sociaux</p>
                 <ul class="flex">
                     <li>
-                        <a class="hover-footer-logo-opacity"><img src="asset/images/facebook-logo.png" alt="Logo de Facebook"></a>
+                        <a class="hover-low-opacity"><img src="asset/images/facebook-logo.png" alt="Logo de Facebook"></a>
                     </li>
                     <li>
-                        <a class="hover-footer-logo-opacity"><img src="asset/images/twitter-logo.png" alt="Logo de Twitter"></a>
+                        <a class="hover-low-opacity"><img src="asset/images/twitter-logo.png" alt="Logo de Twitter"></a>
                     </li>
                     <li>
-                        <a class="hover-footer-logo-opacity"><img src="asset/images/instagram-logo.png" alt="Logo de Instagram"></a>
+                        <a class="hover-low-opacity"><img src="asset/images/instagram-logo.png" alt="Logo de Instagram"></a>
                     </li>
                 </ul>
             </div>
