--- a/to_manage.html
+++ b/to_manage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="flex-between">
+    <header class="header flex-between">
         <!-- Logo -->
         <div class="logo_header">
             <img src="asset/images/logo x150.png" alt="logoacgd" width="150" height="75">
@@ -57,31 +57,184 @@
             </p>
         </div>
     <!-- Section service 1 et 2 -->
-    <section class="">
+    <section class="bloc_article">
         <!-- Service 1 -->
-        <article class="frame_1">
+        <article class="article_1">
             <header>
-
+                    <h1 class="title_service">
+                        Service 1
+                    </h1>
             </header>
             <main>
-
+                    <img class="image_service_1" src="asset/images/to_manage/image_to_manage1.jpg" alt="image_home" width="610px" height="510px">
             </main>
             <footer>
+                    <p class="text_service">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat 
+                        tristique ex. Etiam a volutpat sem. Nunc risus sapien, faucibus ut 
+                        semper ut, lobortis nec quam. Nullam semper accumsan dictum. Integer 
+                        mollis risus eget est malesuada varius. Donec blandit feugiat risus.
 
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat 
+                        tristique ex. Etiam a volutpat sem. Nunc risus sapien, faucibus ut 
+                        semper ut, lobortis nec quam. Nullam semper accumsan dictum. Integer 
+                        mollis risus eget est malesuada varius. Donec blandit feugiat risus.
+                    </p>
             </footer>
         </article>
         <!-- Service 2 -->
-        <article class="frame_2">
+        <article class="article_2">
             <header>
-
+                <h1 class="title_service2">
+                    Service 2
+                </h1>
             </header>
             <main>
-
+                <img class="image_service2" src="asset/images/to_manage/image_to_manage2.jpg" alt="image_home_2" width="610px" height="510px">
             </main>
             <footer>
+                <p class="text_service2">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat 
+                    tristique ex. Etiam a volutpat sem. Nunc risus sapien, faucibus ut 
+                    semper ut, lobortis nec quam. Nullam semper accumsan dictum. Integer 
+                    mollis risus eget est malesuada varius. Donec blandit feugiat risus.
 
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat 
+                    tristique ex. Etiam a volutpat sem. Nunc risus sapien, faucibus ut 
+                    semper ut, lobortis nec quam. Nullam semper accumsan dictum. Integer 
+                    mollis risus eget est malesuada varius. Donec blandit feugiat risus.
+                </p>
             </footer>
         </article>
-    </section>    
+    </section>
+    <!-- Statistques -->
+    <section class="bloc_stats">
+        <!-- Titre -->
+        <header>
+            <h1 class="title_stats">
+                Statistiques
+            </h1>
+        </header>
+        <!-- Logo -->
+        <main>
+            <div class="icone_stats">
+                <img src="asset/images/to_manage/icone_stats_1.svg" alt="icone1">
+                <img src="asset/images/to_manage/icone_stats_2.svg" alt="icone2">
+                <img src="asset/images/to_manage/icone_stats_3.svg" alt="icone3">
+                <img src="asset/images/to_manage/icone_stats_4.svg" alt="icone4">
+                <img src="asset/images/to_manage/icone_stats_5.svg" alt="icone5">
+            </div>
+        </main>
+        <!-- les chiffres -->
+        <footer>
+            <div class="text_stats">
+                <p>
+                    120 000 
+                    Lots
+                </p>
+                <p>
+                    120 000 
+                    Lots
+                </p>
+                <p>
+                    120 000 
+                    Lots
+                </p>
+                <p>
+                    120 000 
+                    Lots
+                </p>
+                <p>
+                    120 000 
+                    Lots
+                </p>
+            </div>
+        </footer>
+    </section>
+    <footer class="footer_to_manage">
+        <!-- logo + texte + icone RS -->
+        <div class="logo-text-icon">
+            <a href="index.html">
+                <img class="logo_acgd_footer" src="asset/images/logo_white_150.png" alt="logoacgd" width="200" height="">
+            </a>
+            <!-- Texte + Hyper lien logo RS-->
+            <div>
+                <p class="text_footer">
+                    Retrouvez-nous sur nos réseaux sociaux
+                </p>
+                <ul class="logo_footer">
+                    <li>
+                        <a href=""><img src="asset/images/facebook-logo.png" alt="logo Facebook"></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="asset/images/twitter-logo.png" alt="logo twitter"></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="asset/images/instagram-logo.png" alt="logo instagram"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- Services -->
+        <div class="block_services">
+            <h2>
+                Services
+            </h2>
+            <ul>
+                <li>
+                    <a href="buy.html">Achat</a>
+                </li>
+                <li>
+                    <a href="sell.html">Vendre</a>
+                </li>
+                <li>
+                    <a href="rent.html">Louer</a>
+                </li>
+            </ul>
+        </div>
+        <!-- Accès Rapide -->
+        <div class="block_acces_rapide">
+            <h2>
+                Accès rapide
+            </h2>
+            <ul>
+                <li>
+                    <a href="">Inscription Newsletter</a>
+                </li>
+                <li>
+                    <a href="">Qui sommes-nous ?</a>
+                </li>
+                <li>
+                    <a href="">Nos offres d'emploi</a>
+                </li>
+                <li>
+                    <a href="">Avis client</a>
+                </li>
+                <li>
+                    <a href="">Plan du site</a>
+                </li>
+            </ul>
+        </div>
+        <!-- Contact -->
+        <div class="block_contact">
+            <h2>
+                Contact
+            </h2>
+            <ul>
+                <li>
+                    <img src="asset/images/to_manage/noun-phone-6444426.svg" alt="icone_phone" width="30px" height="30px">
+                    <a href="">06.08.16.45.22</a>
+                </li>
+                <li>
+                    <img src="asset/images/to_manage/noun-mail-430296.svg" alt="icone_mail" width="30px" height="30px">
+                    <a href="">contact@acgdiimo.fr</a>
+                </li>
+                <li>
+                    <img src="asset/images/to_manage/noun-location-4832828.svg" alt="icone_mail" width="30px" height="30px">
+                    <a href="">Saint-Junien</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
