--- a/rent.html
+++ b/rent.html
@@ -66,7 +66,21 @@
         </div>
     </main>
     <footer>
-        Test
+        <div>
+            <div><p>1</p></div>
+            <div><p>1</p></div>
+            <div><p>1</p></div>
+        </div>
+        <div>
+            <p>22222222</p>
+            <p>2</p>
+        </div>
+        <div>
+            3
+        </div>
+        <div>
+            4
+        </div>
     </footer>
 </body>
 </html>
