--- a/rent.html
+++ b/rent.html
@@ -54,10 +54,10 @@
                 <div id="ordre"><h2>Informations sur les services</h2></div>
                 <div id="ordre"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius dolorem nisi ipsa nesciunt, possimus debitis? Quod eaque similique unde nam voluptatibu</p></div>
             </div>
-            <div id="ordre"><img src="./asset/images/rent/agent-immobilier-visite.jpg"></div>
+            <div id="ordre"><img src="./asset/images/rent/agent-immobilier-visite.jpg" alt=""></div>
         </div>
         <div class=infos-links>
-            <div id="ordre"><img src="./asset/images/rent/maison.jpg"></div>
+            <div id="ordre"><img src="./asset/images/rent/maison.jpg" alt=""></div>
             <div>
                 <div id="ordre"><h2>Liens utiles</h2></div>
                 <div id="ordre"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius dolorem nisi ipsa nesciunt, possimus debitis? Quod eaque similique unde nam voluptatibu</p></div>
@@ -67,19 +67,34 @@
     </main>
     <footer>
         <div>
-            <div><p>1</p></div>
-            <div><p>1</p></div>
-            <div><p>1</p></div>
+            <div><p><img src="./asset/images/logo_white_150.png" alt=""></p></div>
+            <div><p>Retrouvez-nous sur nos réseaux sociaux</p></div>
+            <div><p>
+                    <img src="asset/images/facebook-logo.png" alt="">
+                    <img src="asset/images/twitter-logo.png" alt="">
+                    <img src="asset/images/instagram-logo.png" alt="">
+                </p>
+            </div>
         </div>
         <div>
-            <p>22222222</p>
-            <p>2</p>
+            <p>Services</p>
+            <p>Achat</p>
+            <p>Vendre</p>
+            <p>Louer</p>
         </div>
         <div>
-            3
+            <p>Accès rapide</p>
+            <p>Inscription newsletter</p>
+            <p>Qui sommes-nous ?</p>
+            <p>Nos offres d’emploi</p>
+            <p>Avis client</p>
+            <p>Plan du site</p>
         </div>
         <div>
-            4
+            <p>Contact</p>
+            <p>06.08.16.45.22</p>
+            <p>contact@acgdimmo.fr</p>
+            <p>Saint-Junien</p>
         </div>
     </footer>
 </body>
