feat: icon account, positioning top-content

--- a/sell.html
+++ b/sell.html
@@ -22,7 +22,7 @@
         </nav>
         <button class="account-connexion" type="button">
             <a class="flex" href="">
-                <span></span>
+                <i class="fa-solid fa-user"></i>
                 <h2 class="title-txt">Mon compte</h2>
             </a>
         </button>
