--- a/offers.html
+++ b/offers.html
@@ -150,7 +150,7 @@
             <button class="to-apply">POSTULER</button>
         </div>
         <section class="section3">
-            <!--Third section-->
+            <!--Troisième section-->
             <div class="section3-title">
                 <h4>Mieux nous connaître</h4>
             </div>
