add  icon login

--- a/rent.html
+++ b/rent.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Locations</title>
     <!-- Create link to file css... -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="asset/css/rent.css" rel="stylesheet">
 </head>
 <body>
@@ -20,7 +21,7 @@
                 </ul>
             </nav>
                 <ul class="compte">
-                    <li><a href="to_manage.html">Mon compte</a></li>
+                    <li><i class="fa-solid fa-user"></i><a href="to_manage.html">Mon compte</a></li>
                 </ul>
     </header>
     <main>
