--- a/offers.html
+++ b/offers.html
@@ -228,7 +228,7 @@
                 <li id="number">
                     <p><i class="fa-solid fa-phone"></i>  00-00-00-00-00</p>
                 </li>
-                <li><a href="#"><i class="fa-regular fa-envelope"></i> contact@acgdimmo.fr</a></li>
+                <li><a href="mailto: contact@acgdimmo.fr"><i class="fa-regular fa-envelope"></i> contact@acgdimmo.fr</a></li>
                 <li><a
                         href="https://www.google.fr/maps/place/87200+Saint-Junien/@45.8964635,0.8029236,12z/data=!3m1!4b1!4m6!3m5!1s0x47feeadaef87b0c9:0x8b265b0dc126d53e!8m2!3d45.88716!4d0.901165!16zL20vMDh6Xzkz?entry=ttu"><i class="fa-solid fa-location-dot"></i> Saint-Junien</a>
                 </li>
