--- a/index.html
+++ b/index.html
@@ -27,42 +27,47 @@
                 <li><a class="activ" href="rent.html">Louer</a></li>
                 <li><a class="activ"href="sell.html">Vendre</a></li>
                 <li><a class="activ" href="login.html">Contact</a></li>
-            </ul>
+            </ul>         
         </nav>
+
         <div class="auth"> 
             <li><a href="#"><i class="fa-regular fa-user"></i>Mon compte</a></li>
         </div>
+        
+        <div class="menu_burger">
+            <i class="fa-solid fa-bars"></i>
+        </div>   
+
    </header>
 
 <!-- bannière avec fonction recherche -->
    <div class="banner">
-     <div class="search">
-        <div class="menu_search">
-            <select class="menu_search_deco">
-                <option label="">Je cherche ...</option>
-                <option value="vente">Vente</option>
-                <option value="location">Location</option>
-            </select>
-            <div>
-                <!-- <i class="fa-solid fa-magnifying-glass"></i> -->
-                <input class="menu_search_deco" type="text" placeholder="Localisation..."  /> 
-            </div>
-            <select class="menu_search_deco">
-                <option label="">Type de biens ...</option>
-                <option value="appartement">Appartement</option>
-                <option value="maison">Maison</option>
-                <option value="terrain">Terrain</option>
-                <option value="autre">Autre</option>
-            </select>
-            <div>
-                <input class="menu_search_deco" type="text" placeholder="Prix maximum..."  /> 
-            </div>
-            <div class="search_btn">
-                <a href="#"><button class="menu_search_deco">Rechercher...</button></a>
-            </div>
+        <div class="search">
+                <div class="menu_search">
+                        <select class="menu_search_deco">
+                            <option label="">Je cherche ...</option>
+                            <option value="vente">Vente</option>
+                            <option value="location">Location</option>
+                        </select>
+                        <div class="input_icon">
+                            <input class="menu_search_deco input_icon_search" type="text" placeholder="Localisation..."  />
+                            <i class="fa-solid fa-magnifying-glass"></i> 
+                        </div>
+                        <select class="menu_search_deco">
+                            <option label="">Type de biens ...</option>
+                            <option value="appartement">Appartement</option>
+                            <option value="maison">Maison</option>
+                            <option value="terrain">Terrain</option>
+                            <option value="autre">Autre</option>
+                        </select>
+                        <div>
+                            <input class="menu_search_deco" type="text" placeholder="Prix maximum..."  /> 
+                        </div>
+                        <div class="search_btn">
+                            <a href="#"><button class="menu_search_deco">Rechercher...</button></a>
+                        </div>
+                </div>
         </div>
-
-     </div>
     </div>
 
 <!-- section actualités -->
