--- a/authentification.html
+++ b/authentification.html
@@ -6,23 +6,23 @@
     <link rel="stylesheet" href="asset/css/authentification.css">
     <title>authentication</title>
 </head>
-
+<!--haeder création-->
 <body>
-    <header>
-        <img src="asset/images/logo x150.png" alt="logoacgd">
+        <header>
+        <img class="logoacgd" src="asset/images/logo x150.png" alt="logoacgd">
         <nav>
             <ul>
                 <li><a href="buy.html">acheter</a></li>
                 <li><a href="rent.html">louer</a></li>
                 <li><a href="sell.html">vendre</a></li>
-                <li><a href="contact.html"></a></li>
+                <li><a href="contact.html">contact</a></li>
             </ul>
         </nav>
         <button>
-            <a href="">me connecter</a>
+            <a href="">mon compte</a>
         </button>
     </header>
 
 </body>
 
-</html>
+</html> 
