--- a/header-footer.html
+++ b/header-footer.html
@@ -24,5 +24,53 @@
         </div>
     </header>
     
+    <footer>
+        <div class="colonne">
+            <div class="footer-logo">
+                <a href="index.html"><img src="./asset/images/logo_white_150.png" alt="Logo"></a>
+                <p>Retrouvez-nous sur les réseaux sociaux</p>
+
+                <ul class="social-media">
+                    <li><i class="fa-brands fa-facebook"></i></li>
+                    <li><i class="fa-brands fa-twitter"></i></li>
+                    <li><i class="fa-brands fa-instagram"></i></li>
+                </ul>
+            </div>
+
+            <div class="footer-service">
+                <h2>Services</h2>
+
+                <ul class="flex">
+                    <li>Achat</li>
+                    <li>Vendre</li>
+                    <li>Louer</li>
+                </ul>
+            </div>
+            <div class="footer-acces">
+                <h2>Accès rapide</h2>
+
+                <ul class="flex">
+                    <li>Inscription newsletter</li>
+                    <li>Qui sommes-nous ?</li>
+                    <li>Nos offres d'emploi</li>
+                    <li>Avis client</li>
+                    <li>Plan du site</li>
+                </ul>
+            </div>
+            <div class="footer-contact">
+                <h2>Contact</h2>
+
+                <ul class="flex">
+                    <li>06.08.16.45.22</li>
+                    <li>contact@acgdimmo.fr</li>
+                    <li>Saint-Junien</li>
+                </ul>
+            </div>
+        </div>
+            <div class="copyright">
+                <p>acgdimmo©</p>
+            </div>
+    
+    </footer>
 </body>
 </html>
