--- a/offers.html
+++ b/offers.html
@@ -26,7 +26,7 @@
         <!--Espace de connexion + icone cliquable-->
         <div class="logo-auth">
             <a href="login.html">
-                <a id="user-logo" href="#Mon compte"><i class="fa-regular fa-user"></i> Mon compte
+                <a id="user-logo" href="authentification.html"><i class="fa-regular fa-user"></i> Mon compte
     </header>
     <main>
         <!--Première section-->
@@ -209,20 +209,20 @@
                 <h2>Services</h2>
 
                 <ul class="flex">
-                    <li>Achat</li>
-                    <li>Vendre</li>
-                    <li>Louer</li>
+                    <a href="buy.html"><li>Achat</li></a>
+                    <a href="sell.html"><li>Vendre</li></a>
+                    <a href="rent.html"><li>Louer</li></a>
                 </ul>
             </div>
             <div class="footer-access">
                 <h2>Accès rapide</h2>
 
                 <ul class="flex">
-                    <li>Inscription newsletter</li>
-                    <li>Qui sommes-nous ?</li>
-                    <li>Nos offres d'emploi</li>
-                    <li>Avis client</li>
-                    <li>Plan du site</li>
+                    <a href="newsletter registration.html"><li>Inscription newsletter</li></a>
+                    <a href="aboutus.html"><li>Qui sommes-nous ?</li></a>
+                    <a href="offers.html"><li>Nos offres d'emploi</li></a>
+                    <a href="customer-feedback.html"><li>Avis client</li></a>
+                    <a href="sitemap.html"><li>Plan du site</li></a>
                 </ul>
             </div>
             <div class="footer-contact">
@@ -230,8 +230,8 @@
 
                 <ul class="flex">
                     <li class="number">06.08.16.45.22</li>
-                    <li>contact@acgdimmo.fr</li>
-                    <li>Saint-Junien</li>
+                    <a href="mailto:contact@acgdimmo.fr"><li>contact@acgdimmo.fr</li></a>
+                    <a href="https://www.google.fr/maps/place/87200+Saint-Junien/@45.8964635,0.802924,12z/data=!3m1!4b1!4m6!3m5!1s0x47feeadaef87b0c9:0x8b265b0dc126d53e!8m2!3d45.88716!4d0.901165!16zL20vMDh6Xzkz?entry=ttu"><li>Saint-Junien</li></a>
                 </ul>
             </div>
         </div>
