buy_in_progress

--- a/buy.html
+++ b/buy.html
@@ -47,8 +47,8 @@
     </div>
 
     <div class="villebudget">
-        <input class="ville" type="text">
-        <input class="budget" type="text">
+        <input class="ville" type="text" placeholder="Ville, région, code postal">
+        <input class="budget" type="text" placeholder="€">
     </div>
 
     <div class="surfacetypedelogement">
