add menu responsive

--- a/sell.html
+++ b/sell.html
@@ -13,6 +13,10 @@
             <img id="head_logo" src="asset/images/logo x150.png" alt="Logo ACGDImmo" width="133" height="">
         </a>
         <nav>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fas fa-bars"></i>
+            </label>
             <ul class="flex">
                 <li><a class="title-txt" href="buy.html">Acheter</a></li>
                 <li><a class="title-txt" href="rent.html">Louer</a></li>
